--- a/styles/onboarding.css
+++ b/styles/onboarding.css
@@ -54,7 +54,7 @@ nav h5{
 .onboarding{
     display: flex;
     width: 100%;
-    height: 200px;
+    height: 300px;
     justify-content: center;
     align-items: center;   
 }
@@ -69,6 +69,32 @@ nav h5{
 .on1 div{
     margin: 10px;
     text-align: center;
+}
+.on1 div:nth-child(1) a{
+    text-decoration: none;
+    color: black;
+}
+.on1 div:nth-child(1):hover a{
+
+    color: white;
+}
+
+.on1 div:nth-child(2) a{
+    text-decoration: none;
+    color: black;
+}
+
+.on1 div:nth-child(2):hover a{
+
+    color: white;
+}
+.on2 div:nth-child(2) a{
+    text-decoration: none;
+    color: black;
+}
+.on2 div:nth-child(2):hover a{
+
+    color: white;
 }
 .on1 div:nth-child(1){
     display: flex;
@@ -141,8 +167,6 @@ nav h5{
     justify-content: center;
     align-items:center;
     transition: 1s all;
-    
-    
 }
 .on2 div:nth-child(2):hover{
     width: 80%;
@@ -157,6 +181,43 @@ nav h5{
     font-size: 30px;
 
 }
+.on3{
+    display: flex;
+    justify-content: center;
+}
+.on3 div{
+    width: 300px;
+    margin: 10px 5px;
+    text-align: center;
+    transition: 1s;
+    height: 100px;
+}
+.on3 div:nth-child(1){
+    background-image: url(../img/img4.jpg);
+    background-size: cover;
+}
+.on3 div:nth-child(2){
+    border: 2px solid green;
+}
+.on3 div:nth-child(2):hover{
+    background: green;
+    width: 600px;
+    cursor: pointer;
+}
+.on3 div:nth-child(2):hover i{
+    font-size: 30px;
+    transition: 1s;
+}    
+.on3 div:nth-child(1) h4{
+    background: rgba(0, 128, 0, 0.767);
+    color: white;
+
+}
+.on3 div:nth-child(1):hover{
+    width: 600px;
+    cursor: pointer;
+}
+
 h2{
     text-align: center;
 }
@@ -196,4 +257,9 @@ footer .siguenos div{
 }
 footer .siguenos div p{
     margin: 0px 5px;
+}
+
+.usuarios a{
+    text-decoration: none;
+    color: black;
 }
